# CoMiSo

./: BUILD_WIN.txt  CMakeLists.txt  README.md
Base/Config/: BaseDefines.hh
Base/Debug/: DebOut.hh
Base/Paths/: Filesystem.hh
Base/Test/: TestChecksum.cc  TestChecksum.hh  TestChecksumCompletion.cc  TestChecksumCompletion.hh  TestChecksumNumberT.hh  TestChecksumReport.hh  TestError.hh  TestErrorInc.hh
Base/Utils/: BaseError.cc  BaseError.hh  IOutputStream.hh  OptionT.hh  Scope.hh  ThrowError.hh
CI/: Windows.bat  ci-mac.sh
Config/: CoMISoDefines.hh  config.hh.in  config_suitesparse.hh.in
Examples/: CMakeLists.txt
Examples/small_AQP/: CMakeLists.txt
Examples/small_adolc/: CMakeLists.txt
Examples/small_cplex_soc/: CMakeLists.txt
Examples/small_eigenproblem/: CMakeLists.txt
Examples/small_exact_constraint_satifaction_example/: CMakeLists.txt  main.cc
Examples/small_factored_example/: CMakeLists.txt
Examples/small_finite_element/: CMakeLists.txt
Examples/small_linear_problem/: CMakeLists.txt
Examples/small_miqp/: CMakeLists.txt
Examples/small_nleast_squares/: CMakeLists.txt
Examples/small_nsolver/: CMakeLists.txt
Examples/small_quadratic_example/: CMakeLists.txt  main.cc
Examples/small_quadratic_resolve_example/: CMakeLists.txt
Examples/small_sparseqr/: CMakeLists.txt
Examples/small_symmetric_dirichlet/: CMakeLists.txt
Examples/small_tinyad/: CMakeLists.txt  main.cc
Examples/small_tinyad_dynamic/: CMakeLists.txt  main.cc
NSolver/: AugmentedLagrangianMethod.hh  AugmentedLagrangianProblem.hh  ConstraintTools.cc  ConstraintTools.hh  FiniteElementHessianProjection.hh  FiniteElementProblem.cc  FiniteElementProblem.hh  FiniteElementTinyAD.hh  GUROBISolver.cc  GurobiHelper.cc  GurobiHelper.hh  IPOPTSolver.cc  LinearConstraintConverter.hh  NConstraintInterface.hh  NPDerivativeChecker.hh  NPTiming.cc  NPTiming.hh  NProblemInterface.hh  NewtonSolver.cc  NewtonSolver.hh  OSQPEigen.hh  OSQPSolver.cc  OSQPSolver.hh  SymmetricDirichletProblem.hh  TapeIDSingleton.hh  TruncatedNewtonPCG.cc  TruncatedNewtonPCG.hh  TruncatedNewtonPCGConfig.hh  TruncatedNewtonPCGConfig_json.hh  TrustregionNewtonPCG.hh
OpenFlipper-Plugin-Examples/Plugin-HarmonicExample/: CMakeLists.txt
QtWidgets/: MISolverDialogUI.hh
Solver/: CholmodSolver.cc  CholmodSolver.hh  CholmodSolverT_impl.hh  ConstrainedSolver.cc  ConstrainedSolver.hh  Eigen_Tools.hh  Eigen_ToolsT_impl.hh  GMM_Tools.hh  GMM_ToolsT_impl.hh  MISolver.cc  SparseQRSolver.cc  SparseQRSolver.hh  SparseQRSolverT_impl.hh  UMFPACKSolver.cc  UMFPACKSolver.hh  UMFPACKSolverT_impl.hh
Tests/: CMakeLists.txt  exact_constraint_projection.cpp  test.cpp
Utils/: CoMISoError.cc  CoMISoError.hh  ExactConstraintProjection.cc  ExactConstraintProjection.hh  ExactConstraintProjection_impl.hh  MatrixDecomposition.cc  MatrixDecomposition.hh  MatrixDecompositionT_impl.hh  Polynomials.hh  Tools.hh
cmake/: FindADOLC.cmake  FindIPOPT.cmake  FindTINYAD.cmake
cmake-library/CI/tests/GMM/: test_gmm.cc
