add_subdirectory (small_AQP)
add_subdirectory (small_adolc)
add_subdirectory (small_eigenproblem)
add_subdirectory (small_finite_element)
add_subdirectory (small_linear_problem)
add_subdirectory (small_miqp)
add_subdirectory (small_nleast_squares)
add_subdirectory (small_nsolver)
add_subdirectory (small_exact_constraint_satifaction_example)
add_subdirectory (small_symmetric_dirichlet)
add_subdirectory (small_tinyad)
add_subdirectory (small_tinyad_dynamic)

if (COMISO_GMM_AVAILABLE)
    add_subdirectory (small_factored_example)
    add_subdirectory (small_quadratic_resolve_example)
    add_subdirectory (small_quadratic_example)
endif()

if(COMISO_SUITESPARSE_SPQR_AVAILABLE AND COMISO_GMM_AVAILABLE)
    add_subdirectory (small_sparseqr)
endif()

if (CPLEX_FOUND )
    add_subdirectory (small_cplex_soc)
endif()
